# flowfit

./: .gitignore  AGENTS.md  MANNEQUIN.md  Makefile  README.md  RESEARCH.md  SUMMARY.md  SYMPTOM_MATRIX.md  package-lock.json  plan.md  pyproject.toml
bikegeo_api/: main.py  schemas.py
bikegeo_api/tests/: test_api.py
bikegeo_core/: __init__.py  constraints.py  coords.py  exporter.py  geometry.py  geometry_export.py  importer.py  mannequin2d.py  mannequin3d.py  models.py  presets.py  serialisation.py  solver.py
docs/: 3d-geometry-overview.md
houdini/: load_bikegeo.py
tests/: test_2d_3d_consistency.py  test_3d_vs_overlay.py  test_angle_measurements.py  test_basic.py  test_bilateral_expansion.py  test_contact_points_3d_vs_2d.py  test_geometry.py  test_knee_side_view_alignment.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.css  App.tsx  BikeAnnotations.tsx  BikeScene3D.tsx  FitBuilderMode.tsx  FitTransferMode.tsx  api.ts  bike3d.ts  frameCatalog.ts  frameCatalog_old.ts  geometry.ts  types.ts
