[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bikegeo-core"
version = "0.1.0"
description = "Contact-point-first bike fit core library (2D, 3D-ready)."
readme = "plan.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "tobinbrett" }
]
dependencies = [
  "pydantic>=2.6.0",
  "numpy>=1.26.0",
  "scipy>=1.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "hypothesis>=6.100.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bikegeo_core", "bikegeo_core.*"]

[tool.pytest.ini_options]
pythonpath = ["."]

